// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render point 1`] = `
<li
  className="my-3 px-3 py-2 flex justify-between items-center bg-gray-100 rounded"
>
  <span
    className="text-gray-600"
  >
    Balalayka
  </span>
  <button
    onClick={[Function]}
  >
    Clear
  </button>
</li>
`;

exports[`should render point 2`] = `
<li
  className="my-3 px-3 py-2 flex justify-between items-center bg-gray-100 rounded"
>
  <span
    className="text-gray-600"
  >
    Vodka
  </span>
  <button
    onClick={[Function]}
  >
    Clear
  </button>
</li>
`;
